--- a/app.css
+++ b/app.css
@@ -41,3 +41,7 @@ select.start,select.end { border: 1px solid #CCC !important; width: 100px; margi
 
 .enter{ float: right;}
 .enter a{height: 12px; margin: 5px;}
+.timeentryCont input{width: 35px; display: none;}
+.timeentryCont textarea{width: 170px; display: none;}
+.timeentryCont p{cursor: pointer;}
+.timeentryCont .hour{cursor: pointer;}
