--- a/app.css
+++ b/app.css
@@ -48,3 +48,5 @@ select.start,select.end { border: 1px solid #CCC !important; width: 100px; margi
 .updateStart, .updateEnd,.updateDate{display: none;}
 .updateDate {  margin: 10px 0;}
 .edited select{border:1px solid #C7C7C7 !important ; margin-bottom: 5px !important;}
+.customeFields select{border:1px solid #C7C7C7 !important ; width: 100px;}
+.customeFields .lable{width: 37%;}
